feat: implement HTTP client and error handling
- Add CaptioneerDefaultClient with robust error handling
- Introduce new HTTP-related error types
- Expand test coverage for HTTP client implementations
- Refactor existing code to use new HTTP client interface
- Export new types and classes for better public API

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "check": "biome check .",
     "typecheck": "tsc --noEmit",
     "prepare": "husky || true",
+    "pre-commit": "lint-staged",
+    "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "release": "semantic-release",
     "prepublishOnly": "pnpm run typecheck && pnpm run test && pnpm run check && pnpm run build"
