docs(release): update branch strategy and automate release process
- Update BRANCH_STRATEGY.md with new release workflow
- Modify publish.yml to trigger on PR merge to main
- Add release:preview script to package.json

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "release": "semantic-release",
+    "release:preview": "semantic-release --dry-run --no-ci --branches release/*",
     "prepublishOnly": "pnpm run typecheck && pnpm run test && pnpm run check && pnpm run build"
   },
   "devDependencies": {
